--- a/index.html
+++ b/index.html
@@ -142,86 +142,80 @@
           <thead>
             <tr>
               <th style="width: 10%"></th>
-              <th style="width: 8%">Clouds</th>
-              <th style="width: 8%">Feels like</th>
-              <th style="width: 8%">Humidity</th>
-              <th style="width: 8%">Max Temp.</th>
-              <th style="width: 8%">Min Temp.</th>
-              <th style="width: 8%">Sunrise</th>
-              <th style="width: 8%">Sunset</th>
-              <th style="width: 8%">Temp</th>
-              <th style="width: 8%">Wind Degrees</th>
-              <th style="width: 8%">Wind Speed</th>
+              <th style="width: 9%">Feels like</th>
+              <th style="width: 9%">Humidity</th>
+              <th style="width: 9%">Max Temp.</th>
+              <th style="width: 9%">Min Temp.</th>
+              <th style="width: 9%">Sunrise</th>
+              <th style="width: 9%">Sunset</th>
+              <th style="width: 9%">Temp</th>
+              <th style="width: 9%">Wind Degrees</th>
+              <th style="width: 9%">Wind Speed</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <th scope="row" class="text-start">Kolkata</th>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-              <td>9</td>
-              <td>10</td>
+              <td><span id="kolkata_feelslike"></span></td>
+              <td><span id="kolkata_humidity"></span></td>
+              <td><span id="kolkata_maxtemp"></span></td>
+              <td><span id="kolkata_mintemp"></span></td>
+              <td><span id="kolkata_sunrise"></span></td>
+              <td><span id="kolkata_sunset"></span></td>
+              <td><span id="kolkata_temp"></span></td>
+              <td><span id="kolkata_winddegree"></span></td>
+              <td><span id="kolkata_windspeed"></span></td>
             </tr>
             <tr>
               <th scope="row" class="text-start">London</th>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-              <td>9</td>
-              <td>10</td>
+              <td><span id="london_feels_like"></span></td>
+              <td><span id="london_humidity"></span></td>
+              <td><span id="london_max_temp"></span></td>
+              <td><span id="london_min_temp"></span></td>
+              <td><span id="london_sunrise"></span></td>
+              <td><span id="london_sunset"></span></td>
+              <td><span id="london_temp"></span></td>
+              <td><span id="london_wind_degree"></span></td>
+              <td><span id="london_wind_speed"></span></td>
             </tr>
           </tbody>
 
           <tbody>
             <tr>
               <th scope="row" class="text-start">Chennai</th>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-              <td>9</td>
-              <td>10</td>
+              <td><span id="chennai_feels_like"></span></td>
+              <td><span id="chennai_humidity"></span></td>
+              <td><span id="chennai_max_temp"></span></td>
+              <td><span id="chennai_min_temp"></span></td>
+              <td><span id="chennai_sunrise"></span></td>
+              <td><span id="chennai_sunset"></span></td>
+              <td><span id="chennai_temp"></span></td>
+              <td><span id="chennai_wind_degree"></span></td>
+              <td><span id="chennai_wind_speed"></span></td>
             </tr>
             <tr>
               <th scope="row" class="text-start">Boston</th>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-              <td>9</td>
-              <td>10</td>
+              <td><span id="boston_feels_like"></span></td>
+              <td><span id="boston_humidity"></span></td>
+              <td><span id="boston_max_temp"></span></td>
+              <td><span id="boston_min_temp"></span></td>
+              <td><span id="boston_sunrise"></span></td>
+              <td><span id="boston_sunset"></span></td>
+              <td><span id="boston_temp"></span></td>
+              <td><span id="boston_wind_degree"></span></td>
+              <td><span id="boston_wind_speed"></span></td>
             </tr>
             <tr>
               <th scope="row" class="text-start">Azerbaijan</th>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-              <td>9</td>
-              <td>10</td>
+              <td><span id="azerbaijan_feels_like"></span></td>
+              <td><span id="azerbaijan_humidity"></span></td>
+              <td><span id="azerbaijan_max_temp"></span></td>
+              <td><span id="azerbaijan_min_temp"></span></td>
+              <td><span id="azerbaijan_sunrise"></span></td>
+              <td><span id="azerbaijan_sunset"></span></td>
+              <td><span id="azerbaijan_temp"></span></td>
+              <td><span id="azerbaijan_wind_degree"></span></td>
+              <td><span id="azerbaijan_wind_speed"></span></td>
             </tr>
           </tbody>
         </table>
