[Bug Fix] Other cities data working

--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
           <tbody>
             <tr>
               <th scope="row" class="text-start">Kolkata</th>
-              <td><span id="kolkata_feelslike"></span></td>
+              <td><span id="kolkata_feels_like"></span></td>
               <td><span id="kolkata_humidity"></span></td>
-              <td><span id="kolkata_maxtemp"></span></td>
-              <td><span id="kolkata_mintemp"></span></td>
+              <td><span id="kolkata_max_temp"></span></td>
+              <td><span id="kolkata_min_temp"></span></td>
               <td><span id="kolkata_sunrise"></span></td>
               <td><span id="kolkata_sunset"></span></td>
               <td><span id="kolkata_temp"></span></td>
-              <td><span id="kolkata_winddegree"></span></td>
-              <td><span id="kolkata_windspeed"></span></td>
+              <td><span id="kolkata_wind_degree"></span></td>
+              <td><span id="kolkata_wind_speed"></span></td>
             </tr>
             <tr>
               <th scope="row" class="text-start">London</th>
