[Feature] Hover effect addedg

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       <h1 class="my-4 text-center">Weather for <span id="cityName"></span></h1>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
+          <div id="card1" class="card mb-4 rounded-3 shadow-sm">
+            <div id="card-header1" class="card-header py-3">
               <h4 class="my-0 fw-normal">Temperature</h4>
             </div>
             <div class="card-body">
@@ -96,8 +96,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
+          <div id="card2" class="card mb-4 rounded-3 shadow-sm">
+            <div id="card-header2" class="card-header py-3">
               <h4 class="my-0 fw-normal">Wind</h4>
             </div>
             <div class="card-body">
@@ -116,8 +116,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-primary">
-            <div class="card-header py-3 text-bg-primary border-primary">
+          <div id="card3" class="card mb-4 rounded-3 shadow-sm">
+            <div id="card-header3" class="card-header py-3">
               <h4 class="my-0 fw-normal">Humidity</h4>
             </div>
             <div class="card-body">
